# trading_engine

./: .gitignore  CMakeLists.txt  README.md
analysis/hedge_latency_analysis/: main.py  pyproject.toml
analysis/hedge_latency_analysis/output/: loss_hg.json  loss_hg_compact.json  pnl_analysis.json
analysis/hedge_latency_analysis/scripts/: csv_to_npz.py  get_loss_hg.py  get_loss_hg_compact.py  merge_csv.py
configs/: strat_config_bybit_perp_btc_usdt_okx_perp_btc_usdt.yaml
deploy/: common.sh  deploy_trading_program  setup_production
deploy/trading_utils/: pnl_formula.py  start  stop
infra/: CMakeLists.txt  binancewebsocket.cpp  binancewebsocket.hpp  book.hpp  bybitwebsocket.cpp  bybitwebsocket.hpp  feedmanager.hpp  instrumentsubscriber.hpp  mdinfo.hpp  okxwebsocket.cpp  okxwebsocket.hpp  pinthreads.cpp  pinthreads.hpp  timer.hpp  websocket.hpp
oms/: CMakeLists.txt  bybitclient.hpp  bybitfills.cpp  bybitfills.hpp  bybitordermanager.cpp  bybitordermanager.hpp  bybitordersrouting.cpp  bybitordersrouting.hpp  bybitpositionmanager.hpp  bybitreconciliationmanager.hpp  exchangeclient.hpp  hedge_group_analysis.h  okxclient.hpp  okxordermanager.cpp  okxordermanager.hpp  okxordersrouting.cpp  okxordersrouting.hpp  okxpositionmanager.hpp  okxreconciliationmanager.hpp  orderhandler.hpp
python_packages/analyze_log/: .gitignore  install  pyproject.toml
python_packages/analyze_log/analyze_log/: __init__.py  cli.py
python_packages/analyze_log/analyze_log/analyzers/: __init__.py
python_packages/analyze_log/analyze_log/analyzers/book/: __init__.py  analyzer.py  collector.py  models.py  reporter.py
python_packages/analyze_log/analyze_log/analyzers/failure/: __init__.py  analyzer.py  collector.py  models.py  reporter.py
python_packages/analyze_log/analyze_log/analyzers/severity/: __init__.py  analyzer.py  collector.py  models.py  reporter.py
python_packages/analyze_log/analyze_log/core/: __init__.py  analyzer.py  collector.py  log.py  preprocessor.py  reporter.py
python_packages/hedge_group_analysis/: install  pyproject.toml
python_packages/hedge_group_analysis/hedge_group_analysis/: __init__.py  main.py
python_packages/hedge_group_analysis/hedge_group_analysis/analysis/: __init__.py  cancel_fill.py  correlation.py  duration.py  summary.py
python_packages/hedge_group_analysis/hedge_group_analysis/utils/: __init__.py  color.py  log.py
python_packages/watch_trading/: .gitignore  install  pyproject.toml
python_packages/watch_trading/watch_trading/: __init__.py  main.py
python_packages/watch_trading/watch_trading/config/: panel_colors.py
python_packages/watch_trading/watch_trading/core/: __init__.py  json.py  monitor.py
python_packages/watch_trading/watch_trading/renderers/: __init__.py  alive.py  base.py  cooldown.py  exposure.py  header.py  health.py  market.py  order.py  pnl.py  position.py  quoting_reference.py  trade.py
python_packages/watch_trading/watch_trading/utils/: __init__.py  formatting.py
scripts/: build  pnl_formula.py  start  stop
src/: ArgumentParser.h  CMakeLists.txt  Configuration.h  CooldownTimer.h  ExchangePnlService.h  ExposureMonitor.h  Hedger.h  InfraConfigManager.h  OrderHealthCheck.h  PendingCancellationManager.h  PendingModificationManager.h  PendingSubmissionManager.h  PnlManager.h  PnlReconciler.h  PostablePriceShifter.h  QuoteMidService.h  Side.h  Signal.h  StopLoss.h  TargetOrderManager.h  TimestampRecorder.h  TokenBucketRateLimiter.h  TouchPriceShifter.h  TradeAnalysis.h  TradingStatusLogger.h  ValueObservabilityChecker.h  book_healthchecks.h  format.h  logging.h  main.cpp  orderbook.hpp  portfoliomanager.hpp  rounding.h  strategy.cpp  strategy.hpp  timer.h  type.h
utils/: connections.hpp  file.h  helper.hpp  instrumentmappings.hpp  logger.hpp  pinthreads.hpp  requests.hpp  staticparams.hpp
