[tool.poetry]
name = "hedge-group-analysis"
version = "0.1.0"
description = "A tool for analyzing hedge group logs"
authors = ["jack <jack@windfall.capital>"]
packages = [{include = "hedge_group_analysis"}]

[tool.poetry.dependencies]
python = "^3.12"
tabulate = "^0.9.0"
colorama = "^0.4.6"
numpy = "^2.2.3"
scipy = "^1.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hedge-group-analysis = "hedge_group_analysis.main:main"
