[tool.poetry]
name = "watch-trading"
version = "0.1.0"
description = "A terminal-based trading status monitor"
authors = ["jack <jack@windfall.capital>"]
packages = [{include = "watch_trading"}]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.0"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
watch-trading = "watch_trading.main:main"
